# single-file-scipy-based-ccn-activation-model

./: .coveragerc  .pre-commit-config.yaml  README.md  ccnact.py  pyproject.toml
.binder/: requirements.txt
.github/workflows/: main.yml  urlcheck.yml
examples/: basics.ipynb
