[build-system]
requires = [
    "setuptools==82.0.1",
    "wheel",
    "setuptools_scm[toml]>=10.0.5"
]
build-backend = "setuptools.build_meta"

[project]
name = "ccnact"
dynamic = ["version"]
description = "KISS SciPy-based CCN activation model "
authors = [
    { name = "Sylwester Arabas", email = "slayoo@agh.edu.pl" }
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "SciPy>=1.17.1",
    "Pint"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pyrcel"
]

[tool.setuptools]
py-modules = ["ccnact"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
version_scheme = "post-release"

[project.urls]
Tracker = "https://github.com/open-atmos-krk/ccnact/issues"
Source = "https://github.com/open-atmos-krk/ccnact"
